<resources>
    <string name="app_name">TestScanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="param_tag">Tag:</string>
    <string name="param_value">Value:</string>
    <string name="inputPassWord">请持卡人输入密码</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_cancel_space">取 消</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_confirm_space">确 认</string>
    <string name="msg_check_first">请先完成或撤销当前操作...</string>
    <string name="common_yes">是</string>
    <string name="common_no">否</string>
    <string name="msg_common_succ">执行成功</string>
    <string name="msg_common_failed">执行失败</string>
    <string name="common_pin_key">PIN密钥</string>
    <string name="common_track_key">磁道密钥</string>
    <string name="common_mac_key">MAC密钥</string>
    <string name="common_second_track">二磁道:</string>
    <string name="common_third_track">三磁道:</string>
    <string name="common_exception">异常</string>
    <string name="common_slot">卡槽:</string>
    <string name="common_card">卡:</string>
    <string name="common_card_type">卡类型：</string>
    <string name="common_decrypt">解密</string>
    <string name="common_encrypt">加密</string>
    <string name="msg_device_connected">设备已经连接</string>
    <string name="msg_device_conn_error">设备连接异常</string>
    <string name="init_coordinate">初始坐标:</string>
    <string name="is_processing">is Processing</string>
    <string name="log_press_keypad">按了密码键:</string>
    <string name="log_press_back">按了退格键:</string>
    <string name="log_is_user_canceled">Is UserCanceled</string>
    <string name="log_is_success">Is Success</string>
    <string name="log_enter_null">输入为空</string>
    <string name="log_enter_success">输入成功：</string>
    <string name="log_entery_pwd_exception">密码输入异常</string>
    <string name="log_enter_pwd_timeout">密码输入超时</string>
    <string name="msg_device_connecting">设备连接中...</string>
    <string name="msg_device_disconn_client">设备被客户主动断开！</string>
    <string name="msg_device_link_disconn_exeception">设备链接异常断开！</string>
    <string name="msg_device_manager_inited">N900设备控制器已初始化!</string>
    <string name="msg_device_conn_succ">设备连接成功.</string>
    <string name="msg_conn_exception">链接异常,请检查设备或重新连接...</string>
    <string name="msg_device_disconn_succ">设备断开成功...</string>
    <string name="msg_device_disconn_exception">设备断开异常:</string>
    <string name="device_type">设备型号：</string>
    <string name="connect_type">设备方式：</string>
    <string name="msg_trans_acc">交易接受</string>
    <string name="msg_trans_reject">交易拒绝</string>
    <string name="msg_request_online">请求联机</string>
    <string name="msg_trans_exceed_limit">交易金额超过限额</string>
    <string name="msg_trans_failed">交易失败</string>
    <string name="msg_trans_result">&amp;gt;&amp;gt;&amp;gt;&amp;gt;【交易完成】，交易结果:</string>
    <string name="msg_trans_error_no_supported_app">找不到支持的应用</string>
    <string name="msg_trans_error_offline_data_auth_failed">脱机数据认证失败</string>
    <string name="msg_trans_error_holder_auth_failed">持卡人认证失败</string>
    <string name="msg_trans_error_card_locked">卡片锁定</string>
    <string name="msg_trans_error_card_expired">卡片已过期</string>
    <string name="msg_trans_error_card_not_effected">卡片未生效</string>
    <string name="msg_trans_error_ecash_nsf">电子现金余额不足</string>
    <string name="msg_error_ec_load_exceed_limit">EC圈存金额超出限额</string>
    <string name="msg_trans_error_script_execut_error">脚本执行错误</string>
    <string name="msg_trans_error_script_transfinite">脚本超限</string>
    <string name="msg_trans_error_pre_money_limit">预处理输入金额超出限额</string>
    <string name="msg_trans_error_pure_ecash_cant_online">纯电子现金卡不能联机</string>
    <string name="msg_trans_error_card_reject">卡片拒绝</string>
    <string name="msg_trans_error_details">&amp;gt;&amp;gt;&amp;gt;&amp;gt;具体错误原因:</string>
    <string name="msg_term_cardNo">卡号:</string>
    <string name="msg_term_cardSN">卡序列号:</string>
    <string name="msg_term_expiredDate">卡有效期:</string>
    <string name="msg_term_serviceCode">服务码:</string>
    <string name="msg_term_track2">二磁道明文:</string>
    <string name="msg_term_track2_ciphertext">&amp;gt;&amp;gt;&amp;gt;&amp;gt;二磁道密文:</string>
    <string name="msg_term_55tag">&amp;gt;&amp;gt;&amp;gt;&amp;gt;55域:</string>
    <string name="msg_term_script">&amp;gt;&amp;gt;&amp;gt;&amp;gt;脚本:</string>
    <string name="msg_term_flushes_data">&amp;gt;&amp;gt;&amp;gt;&amp;gt;冲正数据:</string>
    <string name="msg_emv_trans_failed">emv交易失败:</string>
    <string name="msg_ic_env_notmeet_fallback">ic卡交易环境不满足:交易降级...</string>
    <string name="msg_pboc_online">pboc联机</string>
    <string name="msg_rfqpboc_online">非接qpboc联机</string>
    <string name="msg_request_online_result">&amp;gt;&amp;gt;&amp;gt;&amp;gt;请求联机onRequestOnline，执行结果:</string>
    <string name="msg_select_app_hint">多应用卡片，要进行应用选择！</string>
    <string name="msg_aid_name">aidName:</string>
    <string name="msg_aid">aid:</string>
    <string name="msg_trans_confirm_finish">交易确认完成</string>
    <string name="msg_cardno_null">CardNo为空</string>
    <string name="msg_enter_6_pwd">请输入6位的密码...</string>
    <string name="msg_pwd">密码:</string>
    <string name="msg_swipresult_null">SwipResult为空了！</string>
    <string name="msg_is_use_ecash">是否使用电子现金消费？</string>
    <string name="msg_money_callback_request">金额回调请求...</string>
    <string name="msg_enter_preauto_money">请输入预授权金额（最高12位）:</string>
    <string name="msg_trans_cancel">交易取消</string>
    <string name="msg_preauth_money_null">预授权金额为:空</string>
    <string name="msg_preauth_money">预授权金额为:</string>
    <string name="tv_ma_mpos">MPOS</string>
    <string name="startscan">开始扫码</string>
    <string name="stopscan">停止扫码</string>
    <string name="openlight">开启扫码灯</string>
    <string name="closelight">关闭扫码灯</string>
    <string name="issupport_scanner">是否支持扫码</string>
    <string name="decode">开始解码</string>
    <string name="tv_ma_secret_manager">秘钥体系算法</string>
    <string name="tv_ma_clean_msg">清空信息</string>
    <string name="msg_free_pwd">免密操作...</string>
    <string name="msg_offline_pwd_enter_succ">脱机密码输入成功</string>
    <string name="msg_offline_pwd_length">脱机密码输入成功，密码长度：</string>
    <string name="msg_enter_succ">输入成功：</string>
    <string name="msg_n900_cancel_enter_pwd">KeyBoard取消密码输入</string>
    <string name="msg_select_key_manager">请选择秘钥管理体系:</string>
    <string name="msg_choose_mksk_des">选择了MKSK秘钥体系DES算法</string>
    <string name="msg_choose_dukpt_des">选择了DUKPT秘钥体系DES算法</string>
    <string name="msg_choose_mksk_sm4">选择了MKSK秘钥体系SM4算法</string>
    <string name="msg_choose_mksk_aes">选择了MKSK秘钥体系AES算法</string>
    <string name="msg_device_conn_exception">设备连接异常：</string>
    <string name="input_pin_fail">密码输入失败</string>
    <string name="msg_switch_front">---------------切换前置---------</string>
    <string name="msg_switch_back">---------------切换后置---------</string>
    <string name="msg_onresponse">---------------onResponse---------</string>
    <string name="content_sacnview_error_message">不支持的扫描类型</string>
    <string name="tv_open_card">开启读卡器</string>
    <string name="tv_close_card">关闭读卡器</string>
    <string name="tv_revocate_card">撤销读卡操作</string>
    <string name="msg_swipe_insert_rf_card">请刷卡 或者 插入IC卡 或者 贴卡...</string>
    <string name="msg_use_card_hint">请刷卡或者插入IC卡...</string>
    <string name="msg_card_info_null">卡信息为null</string>
    <string name="msg_cardreader_swiper">读卡器识别到【刷卡】操作</string>
    <string name="msg_cradreader_insert">读卡器识别到【插卡】操作</string>
    <string name="msg_cardreader_rfcard">读卡器识别到非接卡</string>
    <string name="msg_cardreader_rf_cpu">读卡器识别到非接CPU卡</string>
    <string name="msg_cardreader_rf_s50">读卡器识别到非接S50卡</string>
    <string name="msg_cardreader_rf_s70">读卡器识别到非接S70卡</string>
    <string name="msg_cardreader_rf_s50_pro">读卡器识别到非接S50_pro卡</string>
    <string name="msg_cardreader_rf_s70_pro">读卡器识别到非接S70_pro卡</string>
    <string name="msg_cardreader_undefind">;读卡器识别到未定义的非接卡</string>
    <string name="msg_cardreader_undefind_rf">读卡器识别到未定义的非接卡</string>
    <string name="msg_time_consume">耗时：</string>
    <string name="msg_cancel_open_reader">取消开启读卡器</string>
    <string name="msg_timeout">超时</string>
    <string name="msg_timeout_w">超时</string>
    <string name="msg_reader_open_failed">读卡器开启失败</string>
    <string name="msg_reader_open_exception">读卡器开启异常：</string>
    <string name="msg_revocate_reader">撤销读卡操作：</string>
    <string name="msg_succ">成功</string>
    <string name="msg_revocate_reader_exception">撤销读卡操作 异常：</string>
    <string name="msg_close_reader">关闭读卡器：</string>
    <string name="msg_close_reader_exception">关闭读卡器 异常：</string>
    <string name="msg_device_not_conn">设备未连接！</string>
    <string name="msg_device_conn_first">设备未连接,请先连接设备！</string>
    <string name="tv_consume_f">消费流程</string>
    <string name="tv_cardreader_f">读卡器模块</string>
    <string name="tv_swip_f">磁道数据模块</string>
    <string name="tv_pin_f">PIN模块</string>
    <string name="tv_emv_f">EMV模块</string>
    <string name="tv_iccard_f">IC卡模块</string>
    <string name="tv_rfcard_f">非接卡模块</string>
    <string name="tv_light_f">指示灯模块</string>
    <string name="tv_terminalmanage_f">终端管理模块</string>
    <string name="tv_printer_f">打印机模块</string>
    <string name="tv_storage_f">存储模块</string>
    <string name="tv_security_f">安全认证模块</string>
    <string name="tv_scanner_f">扫描模块</string>
    <string name="tv_usbserial_f">串口模块</string>
    <string name="msg_first_run">首次运行，须先装载主密钥、工作秘钥、公钥  、aid！！</string>
    <string name="msg_first_run_dukpt">首次运行，须先装载DUKPT、公钥  、aid！！</string>
    <string name="msg_choose_terminalmanage_f">选择了终端管理模块(TerminalManageFragment)</string>
    <string name="msg_choose_cardreader_f">选择了读卡器模块(CardReaderFragment)</string>
    <string name="msg_choose_consume_f">选择了消费模块(ConsumeFragment)</string>
    <string name="msg_choose_emv_f">选择了EMV模块(EMVFragment)</string>
    <string name="msg_choose_iccard_f">选择了IC卡模块(ICCardFragment)</string>
    <string name="msg_choose_light_f">选择了指示灯模块(LightFragment)</string>
    <string name="msg_choose_pin_f">选择了PIN模块(PinFragment)</string>
    <string name="msg_choose_printer_f">选择了打印模块(PrinterFragment)</string>
    <string name="msg_choose_rfcard_f">选择了非接卡模块(RFCardFragment)</string>
    <string name="msg_choose_security_f">选择了安全认证模块(SecurityFragment)</string>
    <string name="msg_choose_scanner_f">选择了扫描模块(Scannerfragment)</string>
    <string name="msg_choose_swip_f">选择了磁道数据模块(SwipFragment)</string>
    <string name="msg_choose_storage_f">选择了存储模块(StorgaeFragment)</string>
    <string name="msg_choose_usbserial_f">选择了串口模块(UsbSerialFragment)</string>
    <string name="not_sup_print">此设备类型不支持打印模块</string>
    <string name="msg_choose_sm_f">选择了国密模块</string>
    <string name="msg_choose_8583_f">选择了8583报文示例(MessageCaseFragment)</string>
    <string name="msg_choose_external_pin">选择了外接密码键盘模块(ExternalPinInputFragment)</string>
    <string name="msg_choose_external_scan">选择了外接扫码模块(ExternalScanFragment)</string>
    <string name="msg_choose_external_guestdisplay">选择了N550客显模块(ExternalGuestDisplayFragment</string>
    <string name="tv_readme">Readme</string>
    <string name="tv_load_mk">装载主密钥</string>
    <string name="tv_load_wk">装载工作秘钥</string>
    <string name="tv_load_aid">装载AID</string>
    <string name="tv_load_public_key">装载公钥</string>
    <string name="tv_consume">消费</string>
    <string name="tv_simple_flow">简易流程</string>
    <string name="tv_emv_l3_flow">EMV level3</string>
    <string name="tv_load_dukpt_ksn">装载DUKPT</string>
    <string name="msg_mainkey_load_succ">主密钥装载成功!</string>
    <string name="msg_mainkey_load_failed">主密钥装载失败!</string>
    <string name="msg_add_aid_exception">增加AID异常！</string>
    <string name="msg_add_publickey_exception">添加公钥结果:</string>
    <string name="dialog_tv_scan">扫描选择：</string>
    <string name="dialog_tv_scan_front_hard">前置硬扫码</string>
    <string name="dialog_tv_scan_back_sofe">后置软扫码</string>
</resources>